added authentication and grid to home page

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,9 +1,26 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>home</ion-title>
+    <ion-buttons slot="start" menuId="main">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Budget Loger</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <div class="container">
+    <div class="grid item-1">1</div>
+    <div class="grid item-1">2</div>
+    <div class="grid item-1">3</div>
+    <div class="grid item-1">4</div>
+    <div class="grid item-2">5</div>
+    <div class="grid item-center">6</div>
+    <div class="grid item-2">7</div>
+    <div class="grid item-3">8</div>
+    <div class="grid item-3">9</div>
+    <div class="grid item-4">10</div>
+    <div class="grid item-4">11</div>
+    <div class="grid item-4">12</div>
+    <div class="grid item-4">13</div>
+  </div>
 </ion-content>
