--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,24 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-menu side="start" menuId="main" contentId="main">
+    <ion-header>
+      <ion-toolbar color="primary">
+        <ion-title>Start Menu</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <ion-list>
+        <ion-menu-toggle>
+          <ion-item lines="none">Menu Item</ion-item>
+          <ion-item lines="none">Menu Item</ion-item>
+          <ion-item lines="none">Menu Item</ion-item>
+          <ion-item lines="none">Menu Item</ion-item>
+          <ion-item lines="none" (click)="logOut()">
+            <ion-icon slot="start" name="log-out-outline"></ion-icon>
+            <ion-label>Kijelentkezés</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+  <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app>
