--- a/src/app/pages/home/category/category.component.html
+++ b/src/app/pages/home/category/category.component.html
@@ -1,7 +1,21 @@
-<div class="item">
-  <ion-label [innerText]="category.name"></ion-label>
-  <ion-icon (click)="openAddCostModal()" [name]="category.iconName"></ion-icon>
-  <ion-label>{{
-    category.spent | currency: currency:"symbol":"1.0-0"
-  }}</ion-label>
-</div>
+<ng-container *ngIf="category; else addCategory">
+  <div class="item">
+    <ion-label [innerText]="category.name"></ion-label>
+    <ion-icon
+      (click)="openAddCostModal()"
+      [name]="category.iconName"
+    ></ion-icon>
+    <ion-label class="spent">{{
+      category.spent | currency: currency:"symbol":"1.0-0"
+    }}</ion-label>
+  </div>
+</ng-container>
+<ng-template #addCategory>
+  <div class="item">
+    <ion-icon
+      class="addCategory"
+      (click)="openAddCategoryModal()"
+      name="add"
+    ></ion-icon>
+  </div>
+</ng-template>
