--- a/src/app/pages/home/add-cost/add-cost.component.scss
+++ b/src/app/pages/home/add-cost/add-cost.component.scss
@@ -1,9 +1,3 @@
-.icon {
-  -webkit-text-fill-color: white;
-  -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: black;
-}
-
 ion-grid {
   height: 100%;
 }
@@ -22,13 +16,12 @@ ion-grid {
     "title title title title title"
     "amount amount amount amount amount"
     "divide button-7 button-8 button-9 back"
-    "multiplication button-4 button-5 button-6 row-25"
+    "multiplication button-4 button-5 button-6 clear"
     "subtraction button-1 button-2 button-3 submit"
-    "add row-42 button-0 separator submit";
+    "add currency button-0 separator submit";
   justify-content: stretch;
   justify-items: stretch;
   align-items: stretch;
-  background-color: rgb(157, 175, 199);
   font-size: 2.5rem;
 }
 
@@ -104,15 +97,17 @@ ion-grid {
 .back {
   grid-area: back;
 }
-.row-25 {
-  grid-area: row-25;
+.clear {
+  grid-area: clear;
 }
-.row-42 {
-  grid-area: row-42;
+.currency {
+  grid-area: currency;
 }
 .amount {
+  color: red;
   grid-area: amount;
 }
 .title {
+  background-color: #3ae96f;
   grid-area: title;
 }
