--- a/src/global.scss
+++ b/src/global.scss
@@ -16,7 +16,7 @@
 @import "~@ionic/angular/css/normalize.css";
 @import "~@ionic/angular/css/structure.css";
 @import "~@ionic/angular/css/typography.css";
-@import '~@ionic/angular/css/display.css';
+@import "~@ionic/angular/css/display.css";
 
 /* Optional CSS utils that can be commented out */
 @import "~@ionic/angular/css/padding.css";
@@ -24,3 +24,19 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+.add-cost-modal .modal-wrapper {
+  align-self: flex-end;
+  height: 60%;
+}
+
+.add-category-modal .modal-wrapper {
+  height: 40%;
+  width: 90%;
+}
+
+.icon-list-modal .modal-wrapper {
+  height: 70%;
+  width: 80%;
+  box-shadow: 0px 0px 10px 0px #000000;
+}
