--- a/src/global.scss
+++ b/src/global.scss
@@ -35,6 +35,11 @@
   width: 90%;
 }
 
+.update-category-modal .modal-wrapper {
+  height: 40%;
+  width: 90%;
+}
+
 .icon-list-modal .modal-wrapper {
   height: 70%;
   width: 80%;
