--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -21,11 +21,11 @@
 
 <ion-content class="ion-text-center">
   <ng-container
-    *ngIf="categoryService.listedCategories$ | async as categories; else loading"
+    *ngIf="categoryService.categories$ | async as categories; else loading"
   >
     <div class="container">
       <ng-container *ngFor="let category of categories">
-        <div class="grid {{category.slot}}">
+        <div class="grid">
           <app-category
             [category]="category"
             [isEditMode]="isEditMode"
