--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,54 +1,16 @@
-<ion-header>
-  <ion-toolbar class="ion-text-center">
-    <ion-buttons *ngIf="!isEditMode" slot="start" menuId="main">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-buttons *ngIf="isEditMode" slot="start">
-      <ion-button (click)="switchToEdit()">
-        <ion-icon name="arrow-back"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-    <ion-title
-      >{{isEditMode ? 'Kategóriák szerkesztése' : 'Budget Loger'}}</ion-title
-    >
-    <ion-buttons slot="primary">
-      <ion-button (click)="switchToEdit()">
-        <ion-icon name="pencil"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content class="ion-text-center">
-  <ng-container
-    *ngIf="categoryService.categories$ | async as categories; else loading"
-  >
-    <div class="container">
-      <ng-container *ngFor="let category of categories">
-        <div class="grid">
-          <app-category
-            [category]="category"
-            [isEditMode]="isEditMode"
-          ></app-category>
-        </div>
-      </ng-container>
-      <ng-container *ngIf="categories.length < 12">
-        <div class="grid item-{{categories.length + 1}}">
-          <app-category
-            (isLoading)="isLoadingEvent($event)"
-            [slot]="('item-' + (categories.length + 1) | castToGridSlot)"
-          >
-          </app-category>
-        </div>
-      </ng-container>
-      <div class="grid item-big">
-        <div class="item center">
-          <circle-progress [percent]="100" [title]="'Cél'"></circle-progress>
-        </div>
-      </div>
-    </div>
-  </ng-container>
-  <ng-template #loading
-    ><ion-spinner color="primary"></ion-spinner
-  ></ng-template>
-</ion-content>
+<ion-tabs>
+  <ion-tab-bar slot="bottom">
+    <ion-tab-button tab="categories">
+      <ion-label>Kategóriák</ion-label>
+      <ion-icon name="apps"></ion-icon>
+    </ion-tab-button>
+    <ion-tab-button tab="transaction">
+      <ion-label>Tranzakciók</ion-label>
+      <ion-icon name="receipt"></ion-icon>
+    </ion-tab-button>
+    <ion-tab-button tab="overview">
+      <ion-label>Áttekintés</ion-label>
+      <ion-icon name="stats-chart"></ion-icon>
+    </ion-tab-button>
+  </ion-tab-bar>
+</ion-tabs>
