--- a/src/global.scss
+++ b/src/global.scss
@@ -40,8 +40,8 @@
   width: 90%;
 }
 
-.icon-list-modal .modal-wrapper {
-  height: 70%;
+.icon-creator-modal .modal-wrapper {
+  height: 80%;
   width: 80%;
   box-shadow: 0px 0px 10px 0px #000000;
 }
