--- a/src/app/pages/home/categories/add-category/add-category.component.html
+++ b/src/app/pages/home/categories/add-category/add-category.component.html
@@ -19,7 +19,10 @@
     <ion-grid>
       <ion-row>
         <ion-col class="icon-list" (click)="openIconListModal()" size="2">
-          <ion-icon [name]="selectedIcon"></ion-icon>
+          <ion-icon
+            [style.background-color]="selectedColor"
+            [name]="selectedIcon"
+          ></ion-icon>
         </ion-col>
         <ion-col size="10">
           <ion-item>
@@ -33,6 +36,7 @@
           </ion-item>
         </ion-col>
       </ion-row>
+      <ion-row> </ion-row>
     </ion-grid>
   </form>
 </ion-content>
