--- a/src/app/pages/home/categories/add-cost/add-cost.component.html
+++ b/src/app/pages/home/categories/add-cost/add-cost.component.html
@@ -16,7 +16,7 @@
 
 <ion-content>
   <div class="container">
-    <div class="header title">
+    <div [style.background-color]="category.color" class="header title">
       <ion-icon [name]="category.iconName"></ion-icon>
     </div>
     <div class="header amount">{{ newCost }}{{ " " + currency }}</div>
