add date bar to header

--- a/src/app/pages/home/categories/add-category/add-category.component.html
+++ b/src/app/pages/home/categories/add-category/add-category.component.html
@@ -18,7 +18,7 @@
   <form [formGroup]="newCategoryForm">
     <ion-grid>
       <ion-row>
-        <ion-col class="icon-list" (click)="openIconListModal()" size="2">
+        <ion-col class="icon-list" (click)="openIconCreatorModal()" size="2">
           <ion-icon
             [style.background-color]="selectedColor"
             [name]="selectedIcon"
