--- a/src/app/pages/home/categories/categories.page.scss
+++ b/src/app/pages/home/categories/categories.page.scss
@@ -1,5 +1,6 @@
 .container {
   display: grid;
+  position: absolute;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr;
   grid-template-areas:
@@ -12,7 +13,7 @@
   align-items: stretch;
   grid-gap: 0.25rem;
   height: 100%;
-  padding: 1.5rem 0;
+  padding: 3rem 0 1.5rem 0;
   margin: 0;
 
   .grid {
