--- a/src/app/pages/home/categories/categories.page.scss
+++ b/src/app/pages/home/categories/categories.page.scss
@@ -13,7 +13,7 @@
   align-items: stretch;
   grid-gap: 0.25rem;
   height: 100%;
-  padding: 3rem 0 1.5rem 0;
+  padding: 1.5rem 0 1.5rem 0;
   margin: 0;
 
   .grid {
@@ -68,5 +68,26 @@
   }
   .item-big {
     grid-area: item-big;
+  }
+}
+
+.day {
+  background-color: var(--ion-color-primary-contrast);
+  color: transparent;
+  padding: 2px;
+  border-radius: 4px;
+}
+
+.date {
+  ion-icon {
+    font-size: 1.2rem;
+  }
+}
+
+ion-toolbar {
+  font-weight: bold;
+  align-self: center;
+  ion-icon {
+    font-size: 1.5rem;
   }
 }
