--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -4,7 +4,7 @@
       <ion-label>Kategóriák</ion-label>
       <ion-icon name="apps"></ion-icon>
     </ion-tab-button>
-    <ion-tab-button tab="transaction">
+    <ion-tab-button tab="transactions">
       <ion-label>Tranzakciók</ion-label>
       <ion-icon name="receipt"></ion-icon>
     </ion-tab-button>
