--- a/src/app/pages/home/transactions/transactions.page.html
+++ b/src/app/pages/home/transactions/transactions.page.html
@@ -13,7 +13,7 @@
             <ion-title>BudgetLoger </ion-title>
           </ion-col>
           <ion-col>
-            <ion-icon name="search"></ion-icon>
+            <ion-icon name="search" (click)="notImplementedYet()"></ion-icon>
           </ion-col>
         </ion-row>
         <ion-row class="date">
@@ -39,6 +39,18 @@
       </ion-grid>
     </ion-toolbar>
   </ion-header>
+
+  <!-- <ion-item-sliding *ngFor="let offer of offers" #slidingItem>
+            <app-offer-item [offer]="offer"></app-offer-item>
+            <ion-item-options side="start">
+              <ion-item-option
+                color="secondary"
+                (click)="onEdit(offer.id, slidingItem)"
+                ><ion-icon name="create" slot="icon-only"></ion-icon
+              ></ion-item-option>
+            </ion-item-options>
+
+          </ion-item-sliding> -->
 
   <ion-content>
     <ng-container>
@@ -79,10 +91,19 @@
           </ion-row>
           <ion-row>
             <ion-col>
-              <app-transaction
-                [category]="data.category"
-                [transaction]="data.transaction"
-              ></app-transaction>
+              <ion-item-sliding #slidingItem>
+                <app-transaction
+                  [category]="data.category"
+                  [transaction]="data.transaction"
+                ></app-transaction>
+                <ion-item-options side="end">
+                  <ion-item-option
+                    color="danger"
+                    (click)="deleteTransaction(data.transaction.id)"
+                    ><ion-icon name="trash" slot="icon-only"></ion-icon
+                  ></ion-item-option>
+                </ion-item-options>
+              </ion-item-sliding>
             </ion-col>
           </ion-row>
         </ng-container>
