--- a/src/app/pages/home/categories/edit-category/edit-category.component.html
+++ b/src/app/pages/home/categories/edit-category/edit-category.component.html
@@ -40,6 +40,17 @@
         <ion-col>
           <ion-button
             class="delete-button"
+            color="warning"
+            expand="block"
+            (click)="arhiveCategory()"
+            >Kategória Archiválása</ion-button
+          >
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <ion-button
+            class="delete-button"
             color="danger"
             expand="block"
             (click)="deleteCategory()"
