--- a/src/global.scss
+++ b/src/global.scss
@@ -27,26 +27,26 @@
 
 .add-cost-modal .modal-wrapper {
   align-self: flex-end;
-  height: 60%;
+  height: 60vh;
 }
 
 .add-category-modal .modal-wrapper {
-  height: 40%;
-  width: 90%;
+  height: 40vh;
+  width: 90vw;
 }
 
 .update-category-modal .modal-wrapper {
-  height: 40%;
-  width: 90%;
+  height: 40vh;
+  width: 90vw;
 }
 
 .icon-creator-modal .modal-wrapper {
-  height: 80%;
-  width: 80%;
+  height: 80vh;
+  width: 80vw;
   box-shadow: 0px 0px 10px 0px #000000;
 }
 
 .set-goal-modal .modal-wrapper {
-  height: 20%;
-  width: 80%;
+  height: 20vh;
+  width: 80vw;
 }
