--- a/src/app/pages/home/transactions/transactions.page.html
+++ b/src/app/pages/home/transactions/transactions.page.html
@@ -10,7 +10,7 @@
             <ion-icon class="menu" name="menu"></ion-icon>
           </ion-col>
           <ion-col size="9">
-            <ion-title>BudgetLoger </ion-title>
+            <ion-title>Budget Logger </ion-title>
           </ion-col>
           <ion-col>
             <ion-icon name="search" (click)="notImplementedYet()"></ion-icon>
