--- a/src/app/pages/home/categories/add-category/add-category.component.scss
+++ b/src/app/pages/home/categories/add-category/add-category.component.scss
@@ -4,6 +4,7 @@
     border-radius: 50%;
     padding: 0.75rem;
     margin: 0;
+    color: white;
 
     background-color: #3ae96f;
     transition: border 1s;
