--- a/src/app/pages/home/categories/category/category.component.scss
+++ b/src/app/pages/home/categories/category/category.component.scss
@@ -7,6 +7,7 @@ $icon-active-background: #79e79a;
     border-radius: 50%;
     padding: 0.75rem;
     margin: 0;
+    color: white;
 
     background-color: $icon-background;
     transition: border 1s;
