--- a/src/app/shared/icon-createor/icon-list/icon-list.component.scss
+++ b/src/app/shared/icon-createor/icon-list/icon-list.component.scss
@@ -3,6 +3,7 @@ ion-icon {
   border-radius: 50%;
   padding: 0.75rem;
   margin: 0.5rem;
+  color: white;
 
   background-color: #888;
   transition: border 1s;
