--- a/src/app/pages/home/transactions/transactions.page.html
+++ b/src/app/pages/home/transactions/transactions.page.html
@@ -7,7 +7,11 @@
       <ion-grid>
         <ion-row>
           <ion-col>
-            <ion-icon class="menu" name="menu"></ion-icon>
+            <ion-icon
+              class="menu"
+              name="menu"
+              (click)="onOpenMenu()"
+            ></ion-icon>
           </ion-col>
           <ion-col size="9">
             <ion-title>Budget Logger </ion-title>
