--- a/src/global.scss
+++ b/src/global.scss
@@ -31,22 +31,22 @@
 }
 
 .add-category-modal .modal-wrapper {
-  height: 20vh;
+  height: 9rem;
   width: 90vw;
 }
 
 .update-category-modal .modal-wrapper {
-  height: 40vh;
+  height: 18rem;
   width: 90vw;
 }
 
 .icon-creator-modal .modal-wrapper {
-  height: 80vh;
+  height: 37rem;
   width: 80vw;
   box-shadow: 0px 0px 10px 0px #000000;
 }
 
 .set-goal-modal .modal-wrapper {
-  height: 20vh;
+  height: 9rem;
   width: 80vw;
 }
